@@ -1,5 +1,10 @@
 2006-10-17  Akim Demaille  <demaille@gostai.com>
 
+	recheck.
+	* build-aux.mk (recheck): New.
+
+2006-10-17  Akim Demaille  <demaille@gostai.com>
+
 	Initialize EXTRA_DIST.
 	* build-aux.mk: Do that.
 
